Fixed bug where the time was not showing up

--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,6 @@ body {
   margin-top: 20px;
   box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
-  background-image: url("resources/img1.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position-y: bottom;
   color: white;
 }
 
